Added Free Convection page
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -56,7 +56,8 @@
  				        <li><a href="{% url 'ThermoFluids:FluidPropsCalculator' %}">Fluid properties</a></li>
 				        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">Flow resistance</a></li>
 				        <li><a href="{% url 'ThermoFluids:HeatPump' %}">Heat pump / AC / Refrigerator</a></li>
-				        <li class="divider"></li>
+				        <li><a href="{% url 'ThermoFluids:FreeConvection' %}">Free convection</a></li>
+<!-- 				        <li class="divider"></li> -->
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
 <!-- 				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li> -->
 				      </ul>
