Documentation for Free Convection.

--- a/ThermoFluids/templates/ThermoFluids/FreeConvection.html
+++ b/ThermoFluids/templates/ThermoFluids/FreeConvection.html
@@ -52,6 +52,7 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 		</div>
 		<div class="tab-pane" id="doc">
 			<div class="docview">
+				{% include 'documentation/html/FreeConvection.html' %}
 			</div>
 		</div>
 		<div class="tab-pane" id="wireHeating">
