--- a/ThermoFluids/templates/documentation/html/Home.html
+++ b/ThermoFluids/templates/documentation/html/Home.html
@@ -6,8 +6,8 @@
 <div class="line-block">
 <div class="line"><br /></div>
 </div>
-<p>Welcome to <strong>SmoWeb</strong>, the open computational platform from <a class="reference external" href="http://www.sysmoltd.com">SysMo</a>.
-Here you will find a number of one-page apps that could be used
+<p>Welcome to <strong>SmoWeb</strong>, the open computational platform by <a class="reference external" href="http://www.sysmoltd.com">SysMo</a>.
+Here you will find a number of one-page apps that can be used
 to tackle various engineering problems. Please select the appropriate
 page/app from the navigation bar on the top.</p>
 </div>
