--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -202,6 +202,17 @@ table.nice-table tr:nth-child(odd) {
 	font-size: large;	
 }
 
+.section  h3 {
+	margin-bottom: 10px;
+	font-size: large;	
+}
+
+.section  h4 {
+	margin-bottom: 10px;
+	font-size: medium;
+	font-weight: bold;	
+}
+
 .section .select-text {
 	font-size: medium;  
 	margin-bottom: 5px;
