--- a/ThermoFluids/templates/documentation/html/Home.html
+++ b/ThermoFluids/templates/documentation/html/Home.html
@@ -1,5 +1,4 @@
-<div class="document" id="smoweb-computational-platform">
-<h1 class="title">SmoWeb Computational Platform</h1>
+<div class="document">
 <div class="line-block">
 <div class="line"><br /></div>
 </div>
