--- a/templates/Base.html
+++ b/templates/Base.html
@@ -92,14 +92,24 @@
 	          </ul>
 	        </div>
 			<div class="col-sm-10 col-sm-offset-2 col-md-11 col-md-offset-1 main">
-			{% block content %}	
-				<div class="align-center">
+			{% block content %}
+				<h1 class="title">SmoWeb Computational Platform</h1>
+				<div class="align-center" style="margin-top: 50px;">
 					<img width="400px" src="{% static 'ThermoFluids/StateDiagram3D.svg' %}"></img>
 					<img width="400px" src="{% static 'ThermoFluids/HeatPump.svg' %}"></img>
 				</div>		
 				
 				<div class="docview">
-				{% include 'documentation/html/Home.html' %}
+					<div class="document">
+						<p>
+							Welcome to <strong>SmoWeb</strong>, the open computational
+							platform from 
+							<a class="reference external" href="http://www.sysmoltd.com">SysMo</a>. Here you will find a
+							number of one-page apps that could be used to tackle various
+							engineering problems. Please select the appropriate page/app from
+							the navigation bar on the top.
+						</p>
+					</div>
 				</div>
 			{% endblock %}
 			</div>
